--- a/src/main/resources/org/beru/drive/Application.fxml
+++ b/src/main/resources/org/beru/drive/Application.fxml
@@ -39,22 +39,28 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
 <VBox prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.beru.drive.ui.controller.ApplicationController">
   <children>
-      <HBox VBox.vgrow="NEVER">
+      <HBox alignment="CENTER" VBox.vgrow="NEVER">
          <children>
           <MenuBar>
             <menus>
@@ -95,10 +101,13 @@
               </Menu>
             </menus>
           </MenuBar>
-            <Separator prefWidth="200.0" HBox.hgrow="ALWAYS" />
-            <MenuButton mnemonicParsing="false" text="Cuenta">
+            <Separator prefWidth="200.0" visible="false" HBox.hgrow="ALWAYS" />
+            <MenuButton mnemonicParsing="false" prefWidth="83.0" text="Cuenta" HBox.hgrow="ALWAYS">
               <items>
-                <MenuItem mnemonicParsing="false" onAction="#login" text="Iniciar Sesion" />
+                <MenuItem mnemonicParsing="false" onAction="#login" text="Iniciar Sesion">
+                     <graphic>
+                        <FontIcon iconLiteral="mdi2g-google" />
+                     </graphic></MenuItem>
                 <MenuItem mnemonicParsing="false" onAction="#exit" text="Salir" />
               </items>
             </MenuButton>
@@ -106,37 +115,164 @@
       </HBox>
     <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <items>
-        <AnchorPane />
-        <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="-1.0" prefWidth="-1.0">
-               <content>
-                  <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
-                    <items>
-                        <TableView fx:id="contentTable" prefHeight="200.0" prefWidth="200.0">
-                          <columns>
-                            <TableColumn fx:id="nameCol" prefWidth="509.0" text="Nombre" />
-                            <TableColumn fx:id="lastModCol" minWidth="0.0" prefWidth="165.0" text="Ultima modificacion" />
-                          </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                        </TableView>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-                           <children>
-                              <Button layoutX="289.0" layoutY="32.0" mnemonicParsing="false" text="Hola Mundo" />
-                           </children></AnchorPane>
-                    </items>
-                  </SplitPane>
-               </content>
-        </ScrollPane>
         <AnchorPane>
                <children>
-                  <Button layoutX="145.0" layoutY="14.0" mnemonicParsing="false" onAction="#uploader" text="+">
+                  <Button layoutX="143.0" layoutY="14.0" mnemonicParsing="false" onAction="#uploader" text="Nuevo" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="10.0">
                      <font>
-                        <Font name="Arial Black" size="24.0" />
+                        <Font size="18.0" />
                      </font>
+                     <graphic>
+                        <FontIcon iconLiteral="mdi2f-file-plus-outline" iconSize="24" />
+                     </graphic>
                   </Button>
-                  <Button layoutX="137.0" layoutY="88.0" mnemonicParsing="false" onAction="#reload" text="Reload" />
+                  <VBox alignment="CENTER" layoutX="120.0" layoutY="60.0" prefHeight="108.0" prefWidth="339.0" spacing="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                     <children>
+                        <Label text="Almacenamiento">
+                           <graphic>
+                              <FontIcon iconLiteral="mdi2g-google-cloud" iconSize="18" />
+                           </graphic>
+                        </Label>
+                        <ProgressBar prefWidth="200.0" progress="0.0" />
+                        <Label text="0.0 MB de 0.0 GB utilizado(s)" />
+                     </children>
+                  </VBox>
                </children></AnchorPane>
+            <TabPane tabClosingPolicy="UNAVAILABLE">
+               <tabs>
+                  <Tab closable="false" text="Mi unidad">
+                     <content>
+                    <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="-1.0" prefWidth="-1.0">
+                           <content>
+                              <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
+                                <items>
+                                    <TableView fx:id="contentTable" prefHeight="200.0" prefWidth="200.0">
+                                      <columns>
+                                        <TableColumn fx:id="nameCol" prefWidth="509.0" text="Nombre" />
+                                        <TableColumn fx:id="lastModCol" minWidth="0.0" prefWidth="165.0" text="Ultima modificacion" />
+                                      </columns>
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                    </TableView>
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
+                                </items>
+                              </SplitPane>
+                           </content>
+                    </ScrollPane>
+                     </content>
+                     <graphic>
+                        <FontIcon iconLiteral="mdi2f-folder-google-drive" iconSize="18" />
+                     </graphic>
+                  </Tab>
+                  <Tab closable="false" text="Destacados">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    </content>
+                     <graphic>
+                        <FontIcon iconLiteral="mdi2s-star" iconSize="18" />
+                     </graphic>
+                  </Tab>
+               </tabs>
+            </TabPane>
+            <TabPane tabClosingPolicy="UNAVAILABLE">
+               <tabs>
+                  <Tab text="Detalles">
+                     <content>
+                    <AnchorPane>
+                           <children>
+                              <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </AnchorPane>
+                     </content>
+                     <content>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <ImageView fx:id="picture" fitHeight="160.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" />
+                              <TitledPane animated="false" prefHeight="533.0" prefWidth="337.0" text="Detalles del archivo" VBox.vgrow="ALWAYS">
+                                 <content>
+                                    <ScrollPane fitToHeight="true" fitToWidth="true">
+                                       <content>
+                                          <VBox prefHeight="200.0" prefWidth="100.0" spacing="2.0">
+                                             <children>
+                                                <Label text="Tipo">
+                                                   <font>
+                                                      <Font name="System Bold" size="13.0" />
+                                                   </font>
+                                                </Label>
+                                                <Label fx:id="typeText" text="Label" />
+                                                <Label layoutX="15.0" layoutY="15.0" text="Tamaño">
+                                                   <font>
+                                                      <Font name="System Bold" size="13.0" />
+                                                   </font>
+                                                   <VBox.margin>
+                                                      <Insets top="10.0" />
+                                                   </VBox.margin>
+                                                </Label>
+                                                <Label fx:id="sizeText" layoutX="15.0" layoutY="36.0" text="Label" />
+                                                <Label layoutX="15.0" layoutY="57.0" text="Ubicacion">
+                                                   <font>
+                                                      <Font name="System Bold" size="13.0" />
+                                                   </font>
+                                                   <VBox.margin>
+                                                      <Insets top="10.0" />
+                                                   </VBox.margin>
+                                                </Label>
+                                                <Label fx:id="locationText" layoutX="15.0" layoutY="78.0" text="Label" />
+                                                <Label layoutX="15.0" layoutY="99.0" text="Propietario">
+                                                   <font>
+                                                      <Font name="System Bold" size="13.0" />
+                                                   </font>
+                                                   <VBox.margin>
+                                                      <Insets top="10.0" />
+                                                   </VBox.margin>
+                                                </Label>
+                                                <Label fx:id="ownerText" layoutX="15.0" layoutY="120.0" text="Label" />
+                                                <Label layoutX="15.0" layoutY="141.0" text="Modificado">
+                                                   <font>
+                                                      <Font name="System Bold" size="13.0" />
+                                                   </font>
+                                                   <VBox.margin>
+                                                      <Insets top="10.0" />
+                                                   </VBox.margin>
+                                                </Label>
+                                                <Label fx:id="modifiedText" layoutX="15.0" layoutY="162.0" text="Label" />
+                                                <Label layoutX="15.0" layoutY="179.0" text="Abierto">
+                                                   <font>
+                                                      <Font name="System Bold" size="13.0" />
+                                                   </font>
+                                                   <VBox.margin>
+                                                      <Insets top="10.0" />
+                                                   </VBox.margin>
+                                                </Label>
+                                                <Label fx:id="openText" layoutX="15.0" layoutY="197.0" text="Label" />
+                                                <Label layoutX="15.0" layoutY="215.0" text="Creado">
+                                                   <font>
+                                                      <Font name="System Bold" size="13.0" />
+                                                   </font>
+                                                   <VBox.margin>
+                                                      <Insets top="10.0" />
+                                                   </VBox.margin>
+                                                </Label>
+                                                <Label fx:id="createdText" layoutX="15.0" layoutY="233.0" text="Label" />
+                                             </children>
+                                             <padding>
+                                                <Insets left="5.0" top="5.0" />
+                                             </padding>
+                                          </VBox>
+                                       </content>
+                                    </ScrollPane>
+                                 </content>
+                              </TitledPane>
+                           </children></VBox>
+                     </content>
+                  </Tab>
+                  <Tab text="Actividad">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    </content>
+                  </Tab>
+               </tabs>
+            </TabPane>
       </items>
     </SplitPane>
     <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
