--- a/src/main/resources/org/beru/drive/Application.fxml
+++ b/src/main/resources/org/beru/drive/Application.fxml
@@ -132,8 +132,8 @@
                               <FontIcon iconLiteral="mdi2g-google-cloud" iconSize="18" />
                            </graphic>
                         </Label>
-                        <ProgressBar prefWidth="200.0" progress="0.0" />
-                        <Label text="0.0 MB de 0.0 GB utilizado(s)" />
+                        <ProgressBar fx:id="progressBar" prefWidth="200.0" progress="0.0" />
+                        <Label fx:id="cloudStorageText" text="0.0 MB de 0.0 GB utilizado(s)" />
                      </children>
                   </VBox>
                </children></AnchorPane>
