--- a/src/main/resources/org/beru/drive/Application.fxml
+++ b/src/main/resources/org/beru/drive/Application.fxml
@@ -32,33 +32,15 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.text.Font?>
-<?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
+<?import org.kordamp.ikonli.javafx.*?>
 
-<VBox prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.beru.drive.ui.controller.ApplicationController">
+<VBox prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.beru.drive.ui.controller.ApplicationController">
   <children>
       <HBox alignment="CENTER" VBox.vgrow="NEVER">
          <children>
@@ -68,7 +50,7 @@
                 <items>
                   <MenuItem mnemonicParsing="false" text="New" />
                   <MenuItem mnemonicParsing="false" text="Open…" />
-                  <Menu mnemonicParsing="false" text="Open Recent" />
+                  <Menu mnemonicParsing="false" onAction="#reload" text="Reload" />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" text="Close" />
                   <MenuItem mnemonicParsing="false" text="Save" />
@@ -102,9 +84,9 @@
             </menus>
           </MenuBar>
             <Separator prefWidth="200.0" visible="false" HBox.hgrow="ALWAYS" />
-            <MenuButton mnemonicParsing="false" prefWidth="83.0" text="Cuenta" HBox.hgrow="ALWAYS">
+            <MenuButton fx:id="accountText" mnemonicParsing="false" prefHeight="32.0" prefWidth="169.0" text="Cuenta" HBox.hgrow="ALWAYS">
               <items>
-                <MenuItem mnemonicParsing="false" onAction="#login" text="Iniciar Sesion">
+                <MenuItem fx:id="loginText" mnemonicParsing="false" onAction="#login" text="Iniciar Sesion">
                      <graphic>
                         <FontIcon iconLiteral="mdi2g-google" />
                      </graphic></MenuItem>
